# simple-track

./: .gitignore  MCS_tracking.py  README.md  classes.py  get_MCS_track_data.py  kscale_simpleTrack_wrapper.py  launch_MCS_tracking.py  launch_stitch_MCS_tracks.py  nimrod_object_tracking.py  nimrod_user_functions.py  nimrod_wrapper.py  object_tracking.py  parse_output.py  pyproject.toml  run_simple_track.py  setup.py  stitch_MCS_tracks.py  user_functions.py  wrapper.py
.github/workflows/: pypi_publish.yml  python-package-conda.yml  python-publish.yml
.ipynb_checkpoints/: get_MCS_track_data-checkpoint.py
configs/: chilbolton.conf  chilbolton.yaml  mwe_test.yaml
requirements/: environment.yml
simple_track/: nimrod_driver.py  nimrod_object_tracking.py  nimrod_user_functions.py  nimrod_wrapper.py  object_tracking.py  parse_output.py  storm_track.py  user_functions.py  wrapper.py
src/: Event.py  EventLogger.py  Feature.py  Frame.py  FrameOutputManager.py  FrameTracker.py  LoadingBar.py  OpticalFlowSolver.py  SimpleTrack.py  feature.py  flow_solver.py  frame.py  frame_output.py  frame_tracker.py  load.py  loading_bar.py  run_simple_track.py  simple_track.py  tracker.py  utils.py
src/simpletrack/: exceptions.py  feature.py  flow_solver.py  frame.py  frame_output.py  frame_tracker.py  load.py  run.py  track.py  utils.py
tests/: test_advect_field.py  test_assign_displacements.py  test_check_arrays.py  test_feature.py  test_feature_identification.py  test_flow_solver.py  test_frame.py  test_frame_tracker.py  test_get_2d_tukey_window.py  test_input_checking.py  test_interpolate_subdomain_flows.py  test_mwe_output.py  test_overlap_calculations.py  test_overlapping_subdomains.py  test_resolve_provional_id_conflicts.py  test_simple_track_and_load.py  test_track_subdomain_flow.py  test_utils.py
tests/mwe_test_files/: mwe_dt7.npy
