[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "Simple-Track"
version = "2.0.2"
authors = [
  { name="Adam Gainford", email="adam.gainford@reading.ac.uk" },
  { name="Thorwald Stein", email="t.h.m.stein@reading.ac.uk"} 
]
description = "Threshold-based object tracking algorithm for 2D data "
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MPL-2.0"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "numpy >= 2.3.4",
  "pytest >= 9.0",
  "pytest-cov",
  "pytest-xdist",
  "pyyaml",
  "scipy >= 1.16.3",
  "scikit-image >= 0.25.2"
]

[project.scripts]
simpletrack = "run_simple_track:run_tracking"

[project.urls]
Homepage = "https://github.com/ParaChute-UK/simple-track/"
Issues = "https://github.com/ParaChute-UK/simple-track/issues"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
minversion = "7"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["E", "F", "B", "I", "UP", "SIM", "D101"]
ignore = ["SIM102"]